fix gap

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ a:hover {
     background-image: url(../public/dividers/animated-waves-pink.svg);
     margin-top: 15px;
     margin-bottom: -1px;
+    margin-top: -1px;
 }
 
 .divider-animated-waves-green {
